Iteration 3 done - no bonus

--- a/starter-code/client/src/app/entry-list/entry-list.component.html
+++ b/starter-code/client/src/app/entry-list/entry-list.component.html
@@ -1,4 +1,7 @@
+
+
 <div *ngFor="let journal of journals">
   <p>Title: {{journal.title}}</p>
   <p>Date: {{journal.date}}</p>
+  <a [routerLink]="['journal', journal._id]"> View Details </a>
 </div>
